i added  new components

--- a/index4.html
+++ b/index4.html
@@ -1,3 +1,20 @@
-<h1> htis is to know how branching works on git hub<h1/>
-  
-  <p>it is well with everything and evryone<p/>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+
+<body>
+  <h1> htis is to know how branching works on git hub</h1>
+
+  <p>it is well with everything and evryone</p>
+
+
+  <p> this is an html file</p>
+</body>
+
+</html>
